--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "dependencies": {
+    "@ethereum-attestation-service/eas-sdk": "^2.5.0",
+    "ethers": "^6.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
