--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,6 +8,7 @@
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
   },
+  "permissions": ["tabs", "activeTab"],
   "chrome_url_overrides": {
     "newtab": "newtab.html"
   },
