--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.4",
     "@ethereum-attestation-service/eas-sdk": "^2.5.0",
+    "@tanstack/react-query": "^5.51.23",
     "ethers": "^6.13.2",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
