--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@apollo/client": "^3.11.4",
     "@ethereum-attestation-service/eas-sdk": "^2.5.0",
     "@tanstack/react-query": "^5.51.23",
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
